# libxml2

./: .gitignore  CMakeLists.txt  catalog.c  encoding.c  triostr.c  xmlmodule.c
include/libxml/: xmlversion.h
